// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<span
  className="src-shared-components-TrackIcon-___style__trackIcon___3gJ9l"
>
  <div
    className="src-shared-components-TrackIcon-___style__CH___3YWAb src-shared-components-TrackIcon-___style__main-icon___1q-1_"
  >
    CH
  </div>
  <a
    href="https://www.topcoder-dev.com/tco"
  >
    <div
      className="src-shared-components-TrackIcon-___style__CH___3YWAb src-shared-components-TrackIcon-___style__tco-icon___18ZV7 src-shared-components-TrackIcon-___style__hidden___JXTEt"
    >
      TCO
    </div>
  </a>
</span>
`;

exports[`Matches shallow shapshot 2`] = `
<span
  className="src-shared-components-TrackIcon-___style__trackIcon___3gJ9l"
>
  <div
    className="src-shared-components-TrackIcon-___style__CH___3YWAb src-shared-components-TrackIcon-___style__main-icon___1q-1_"
  >
    CH
  </div>
  <a
    href="https://www.topcoder-dev.com/tco"
  >
    <div
      className="src-shared-components-TrackIcon-___style__CH___3YWAb src-shared-components-TrackIcon-___style__tco-icon___18ZV7"
    >
      TCO
    </div>
  </a>
</span>
`;

exports[`Matches shallow shapshot 3`] = `
<span
  className="src-shared-components-TrackIcon-___style__trackIcon___3gJ9l"
>
  <div
    className="src-shared-components-TrackIcon-___style__CH___3YWAb src-shared-components-TrackIcon-___style__main-icon___1q-1_"
  >
    CH
  </div>
  <a
    href="https://www.topcoder-dev.com/tco"
  >
    <div
      className="src-shared-components-TrackIcon-___style__CH___3YWAb src-shared-components-TrackIcon-___style__tco-icon___18ZV7"
    >
      TCO
    </div>
  </a>
</span>
`;
